# hygenic_indices

./: .gitignore  README.md  cli.py  extract_pdf.py  pyproject.toml
indices/djsi_diversified/: README.md  eligibility.py  models.py  rebalancer.py
indices/djsi_diversified/sample_data/: generate_data.py  universe.csv
indices/sp_carbon_aware/: README.md  eligibility.py  models.py  optimization.py  rebalancer.py
indices/sp_carbon_aware/sample_data/: generate_data.py  universe.csv
indices/sp_carbon_efficient/: README.md  models.py  rebalancer.py  weighting.py
indices/sp_carbon_efficient/sample_data/: generate_data.py  universe.csv
indices/sp_esg/: README.md  eligibility.py  models.py  rebalancer.py
indices/sp_esg/sample_data/: generate_data.py  universe.csv
indices/sp_pact/: README.md  eligibility.py  models.py  optimization.py  rebalancer.py
indices/sp_pact/sample_data/: generate_data.py  universe.csv
methodologies/: downloader.py
tests/: conftest.py
tests/djsi_diversified/: conftest.py  test_eligibility.py  test_models.py  test_rebalancer.py
tests/sp_carbon_aware/: test_eligibility.py  test_models.py  test_optimization.py  test_rebalancer.py
tests/sp_carbon_efficient/: conftest.py  test_models.py  test_rebalancer.py  test_weighting.py
tests/sp_esg/: conftest.py  test_eligibility.py  test_models.py  test_rebalancer.py
tests/sp_pact/: conftest.py  test_eligibility.py  test_models.py  test_rebalancer.py
